--- a/main.html
+++ b/main.html
@@ -9,15 +9,13 @@
 <body>
 
 	<div class="hero">
-
-    <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470" alt="Hero Image">
+    <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470" alt="hero image">
 
     <div class="content">
         <h1>Welcome to my Pinterest clone</h1>
         <p>Discover new inspiration and save your favorite ideas</p>
         <a href="#" class="btn">Explore Now</a>
     </div>
-
 </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
